# cuda-mri-recon

./: CMakeLists.txt  README.md
scripts/: generate_phantom.py
src/: main.cu  nufft.cu  nufft.cuh  utils.cuh
